noinst_LIBRARIES = libmgprocs.a
libmgprocs_a_SOURCES = MGProcs.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_drdlx/PP2SQSQBAR_DDX_DRDLX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_GG_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_UUX_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_drdrx/PP2SQSQBAR_DDX_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_GG_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_dldrx/PP2SQSQBAR_DDX_DLDRX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_dldlx/PP2SQSQBAR_DDX_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_UUX_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar/pp2sqsqbar.h \
					  ./pp2sqsqbar/src/pp2sqsqbar_Parameters_MSSM_SLHA2.h \
					  ./pp2sqsqbar/src/pp2sqsqbar_HelAmps_MSSM_SLHA2.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_veepbduxbx/PP2TTBAR2WBWB_GG_VEEPBDUXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_udxbemvexbx/PP2TTBAR2WBWB_GG_UDXBEMVEXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_veepbduxbx/PP2TTBAR2WBWB_UUX_VEEPBDUXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_udxbduxbx/PP2TTBAR2WBWB_GG_UDXBDUXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_veepbemvexbx/PP2TTBAR2WBWB_GG_VEEPBEMVEXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_udxbduxbx/PP2TTBAR2WBWB_UUX_UDXBDUXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_udxbemvexbx/PP2TTBAR2WBWB_UUX_UDXBEMVEXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_veepbemvexbx/PP2TTBAR2WBWB_UUX_VEEPBEMVEXBX_CPPProcess.h \
					  ./pp2ttbar2wbwb/pp2ttbar2wbwb.h \
					  ./pp2ttbar2wbwb/src/pp2ttbar2wbwb_Parameters_sm.h \
					  ./pp2ttbar2wbwb/src/pp2ttbar2wbwb_HelAmps_sm.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_slslx/PP2SQSQBAR_NOGLUINO_UUX_SLSLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_srsrx/PP2SQSQBAR_NOGLUINO_UUX_SRSRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_NOGLUINO_GG_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ururx/PP2SQSQBAR_NOGLUINO_GG_URURX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_NOGLUINO_UUX_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_crcrx/PP2SQSQBAR_NOGLUINO_GG_CRCRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_NOGLUINO_GG_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ululx/PP2SQSQBAR_NOGLUINO_UUX_ULULX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_NOGLUINO_UUX_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_clclx/PP2SQSQBAR_NOGLUINO_GG_CLCLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ululx/PP2SQSQBAR_NOGLUINO_GG_ULULX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_clclx/PP2SQSQBAR_NOGLUINO_UUX_CLCLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ururx/PP2SQSQBAR_NOGLUINO_UUX_URURX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_srsrx/PP2SQSQBAR_NOGLUINO_GG_SRSRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_slslx/PP2SQSQBAR_NOGLUINO_GG_SLSLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_crcrx/PP2SQSQBAR_NOGLUINO_UUX_CRCRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/pp2sqsqbar_nogluino.h \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_Parameters_MSSM_SLHA2.h \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_HelAmps_MSSM_SLHA2.h \
					  ./pp2ttbar/SubProcesses/P1_Sigma_sm_uux_ttx/UUX_TTX_CPPProcess.h \
					  ./pp2ttbar/SubProcesses/P1_Sigma_sm_gg_ttx/GG_TTX_CPPProcess.h \
					  ./pp2ttbar/src/pp2ttbar_HelAmps_sm.h \
					  ./pp2ttbar/src/pp2ttbar_Parameters_sm.h \
					  ./pp2ttbar/pp2ttbar.h \
					  ./pp2z2mupmum/SubProcesses/P1_Sigma_sm_uux_mupmum/PP2Z2MUPMUM_UUX_MUPMUM_CPPProcess.h \
					  ./pp2z2mupmum/SubProcesses/P1_Sigma_sm_ddx_mupmum/PP2Z2MUPMUM_DDX_MUPMUM_CPPProcess.h \
					  ./pp2z2mupmum/pp2z2mupmum.h \
					  ./pp2z2mupmum/src/pp2z2mupmum_HelAmps_sm.h \
					  ./pp2z2mupmum/src/pp2z2mupmum_Parameters_sm.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_cux_mupmum/CUX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_uux_mupmum/UUX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ssx_mupmum/SSX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ddx_mupmum/DDX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ccx_mupmum/CCX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_sdx_mupmum/SDX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ucx_mupmum/UCX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_dsx_mupmum/DSX_MUPMUM_CPPProcess.h \
					  ./pp2zp2mupmum/src/pp2zp2mupmum_HelAmps_zssm_CKMDiag.h \
					  ./pp2zp2mupmum/src/pp2zp2mupmum_Parameters_zssm_CKMDiag.h \
					  ./pp2zp2mupmum/pp2zp2mupmum.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gd_drgo/GD_DRGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gs_slgo/GS_SLGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gux_ulxgo/GUX_ULXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gs_srgo/GS_SRGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gdx_dlxgo/GDX_DLXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gcx_crxgo/GCX_CRXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gux_urxgo/GUX_URXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gc_crgo/GC_CRGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gdx_drxgo/GDX_DRXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gu_urgo/GU_URGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gcx_clxgo/GCX_CLXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gsx_slxgo/GSX_SLXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gsx_srxgo/GSX_SRXGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gu_ulgo/GU_ULGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gc_clgo/GC_CLGO_CPPProcess.h \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gd_dlgo/GD_DLGO_CPPProcess.h \
					  ./pp2sqgo/pp2sqgo.h \
					  ./pp2sqgo/src/pp2sqgo_HelAmps_MSSM_SLHA2.h \
					  ./pp2sqgo/src/pp2sqgo_Parameters_MSSM_SLHA2.h \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_drdlx/PP2SQSQBAR_DDX_DRDLX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_GG_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_UUX_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_drdrx/PP2SQSQBAR_DDX_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_GG_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_dldrx/PP2SQSQBAR_DDX_DLDRX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_ddx_dldlx/PP2SQSQBAR_DDX_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_UUX_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar/src/pp2sqsqbar_HelAmps_MSSM_SLHA2.cc \
					  ./pp2sqsqbar/src/pp2sqsqbar_Parameters_MSSM_SLHA2.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_veepbduxbx/PP2TTBAR2WBWB_GG_VEEPBDUXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_udxbemvexbx/PP2TTBAR2WBWB_GG_UDXBEMVEXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_veepbduxbx/PP2TTBAR2WBWB_UUX_VEEPBDUXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_udxbduxbx/PP2TTBAR2WBWB_GG_UDXBDUXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_gg_veepbemvexbx/PP2TTBAR2WBWB_GG_VEEPBEMVEXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_udxbduxbx/PP2TTBAR2WBWB_UUX_UDXBDUXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_udxbemvexbx/PP2TTBAR2WBWB_UUX_UDXBEMVEXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/SubProcesses/P1_Sigma_sm_uux_veepbemvexbx/PP2TTBAR2WBWB_UUX_VEEPBEMVEXBX_CPPProcess.cc \
					  ./pp2ttbar2wbwb/src/pp2ttbar2wbwb_HelAmps_sm.cc \
					  ./pp2ttbar2wbwb/src/pp2ttbar2wbwb_Parameters_sm.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_slslx/PP2SQSQBAR_NOGLUINO_UUX_SLSLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_srsrx/PP2SQSQBAR_NOGLUINO_UUX_SRSRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_NOGLUINO_GG_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ururx/PP2SQSQBAR_NOGLUINO_GG_URURX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_NOGLUINO_UUX_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_crcrx/PP2SQSQBAR_NOGLUINO_GG_CRCRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_NOGLUINO_GG_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ululx/PP2SQSQBAR_NOGLUINO_UUX_ULULX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_NOGLUINO_UUX_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_clclx/PP2SQSQBAR_NOGLUINO_GG_CLCLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ululx/PP2SQSQBAR_NOGLUINO_GG_ULULX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_clclx/PP2SQSQBAR_NOGLUINO_UUX_CLCLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ururx/PP2SQSQBAR_NOGLUINO_UUX_URURX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_srsrx/PP2SQSQBAR_NOGLUINO_GG_SRSRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_slslx/PP2SQSQBAR_NOGLUINO_GG_SLSLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_crcrx/PP2SQSQBAR_NOGLUINO_UUX_CRCRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_HelAmps_MSSM_SLHA2.cc \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_Parameters_MSSM_SLHA2.cc \
					  ./pp2ttbar/SubProcesses/P1_Sigma_sm_uux_ttx/UUX_TTX_CPPProcess.cc \
					  ./pp2ttbar/SubProcesses/P1_Sigma_sm_gg_ttx/GG_TTX_CPPProcess.cc \
					  ./pp2ttbar/src/pp2ttbar_HelAmps_sm.cc \
					  ./pp2ttbar/src/pp2ttbar_Parameters_sm.cc \
					  ./pp2z2mupmum/SubProcesses/P1_Sigma_sm_uux_mupmum/PP2Z2MUPMUM_UUX_MUPMUM_CPPProcess.cc \
					  ./pp2z2mupmum/SubProcesses/P1_Sigma_sm_ddx_mupmum/PP2Z2MUPMUM_DDX_MUPMUM_CPPProcess.cc \
					  ./pp2z2mupmum/src/pp2z2mupmum_HelAmps_sm.cc \
					  ./pp2z2mupmum/src/pp2z2mupmum_Parameters_sm.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_cux_mupmum/CUX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_uux_mupmum/UUX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ssx_mupmum/SSX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ddx_mupmum/DDX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ccx_mupmum/CCX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_sdx_mupmum/SDX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_ucx_mupmum/UCX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/SubProcesses/P1_Sigma_zssm_CKMDiag_dsx_mupmum/DSX_MUPMUM_CPPProcess.cc \
					  ./pp2zp2mupmum/src/pp2zp2mupmum_Parameters_zssm_CKMDiag.cc \
					  ./pp2zp2mupmum/src/pp2zp2mupmum_HelAmps_zssm_CKMDiag.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gd_drgo/GD_DRGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gs_slgo/GS_SLGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gux_ulxgo/GUX_ULXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gs_srgo/GS_SRGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gdx_dlxgo/GDX_DLXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gcx_crxgo/GCX_CRXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gux_urxgo/GUX_URXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gc_crgo/GC_CRGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gdx_drxgo/GDX_DRXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gu_urgo/GU_URGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gcx_clxgo/GCX_CLXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gsx_slxgo/GSX_SLXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gsx_srxgo/GSX_SRXGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gu_ulgo/GU_ULGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gc_clgo/GC_CLGO_CPPProcess.cc \
					  ./pp2sqgo/SubProcesses/P1_Sigma_MSSM_SLHA2_gd_dlgo/GD_DLGO_CPPProcess.cc \
					  ./pp2sqgo/src/pp2sqgo_Parameters_MSSM_SLHA2.cc \
					  ./pp2sqgo/src/pp2sqgo_HelAmps_MSSM_SLHA2.cc