noinst_LIBRARIES = libmgprocs.a
libmgprocs_a_SOURCES = MGProcs.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_slslx/PP2SQSQBAR_NOGLUINO_UUX_SLSLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_srsrx/PP2SQSQBAR_NOGLUINO_UUX_SRSRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_NOGLUINO_GG_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ururx/PP2SQSQBAR_NOGLUINO_GG_URURX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_NOGLUINO_UUX_DLDLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_crcrx/PP2SQSQBAR_NOGLUINO_GG_CRCRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_NOGLUINO_GG_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ululx/PP2SQSQBAR_NOGLUINO_UUX_ULULX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_NOGLUINO_UUX_DRDRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_clclx/PP2SQSQBAR_NOGLUINO_GG_CLCLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ululx/PP2SQSQBAR_NOGLUINO_GG_ULULX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_clclx/PP2SQSQBAR_NOGLUINO_UUX_CLCLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ururx/PP2SQSQBAR_NOGLUINO_UUX_URURX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_srsrx/PP2SQSQBAR_NOGLUINO_GG_SRSRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_slslx/PP2SQSQBAR_NOGLUINO_GG_SLSLX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_crcrx/PP2SQSQBAR_NOGLUINO_UUX_CRCRX_CPPProcess.h \
					  ./pp2sqsqbar_nogluino/pp2sqsqbar_nogluino.h \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_Parameters_MSSM_SLHA2.h \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_HelAmps_MSSM_SLHA2.h \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_slslx/PP2SQSQBAR_NOGLUINO_UUX_SLSLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_srsrx/PP2SQSQBAR_NOGLUINO_UUX_SRSRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_dldlx/PP2SQSQBAR_NOGLUINO_GG_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ururx/PP2SQSQBAR_NOGLUINO_GG_URURX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_dldlx/PP2SQSQBAR_NOGLUINO_UUX_DLDLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_crcrx/PP2SQSQBAR_NOGLUINO_GG_CRCRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_drdrx/PP2SQSQBAR_NOGLUINO_GG_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ululx/PP2SQSQBAR_NOGLUINO_UUX_ULULX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_drdrx/PP2SQSQBAR_NOGLUINO_UUX_DRDRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_clclx/PP2SQSQBAR_NOGLUINO_GG_CLCLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_ululx/PP2SQSQBAR_NOGLUINO_GG_ULULX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_clclx/PP2SQSQBAR_NOGLUINO_UUX_CLCLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_ururx/PP2SQSQBAR_NOGLUINO_UUX_URURX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_srsrx/PP2SQSQBAR_NOGLUINO_GG_SRSRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_gg_slslx/PP2SQSQBAR_NOGLUINO_GG_SLSLX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/SubProcesses/P1_Sigma_MSSM_SLHA2_uux_crcrx/PP2SQSQBAR_NOGLUINO_UUX_CRCRX_CPPProcess.cc \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_HelAmps_MSSM_SLHA2.cc \
					  ./pp2sqsqbar_nogluino/src/pp2sqsqbar_nogluino_Parameters_MSSM_SLHA2.cc